@@ -1,3 +1,5 @@
+=pod
+
 =head1 NAME
 
 AnyEvent::Ident - Simple asynchronous ident client and server
