@@ -68,6 +68,13 @@ on_error (carp error)
 A callback subref to be called on error (either connection or transmission error).
 Passes the error string as the first argument to the callback.
 
+=item *
+
+on_bind
+
+A callback subref to be called when the socket has been bound to a port.  Useful
+when using an ephemeral and you do not know the port number in advance.
+
 =back
 
 =cut
@@ -80,6 +87,7 @@ sub new
     hostname => $args->{hostname},  
     port     => $args->{port}     // 113,
     on_error => $args->{on_error} // sub { carp $_[0] },
+    on_bind  => $args->{on_bind}  // sub { },
   }, $class;
 }
 
@@ -139,22 +147,12 @@ sub start
       })
     });
   };
-  
-  if($self->{port} == 0)
-  {
-    my $done = AnyEvent->condvar;
-    $self->{guard} = tcp_server $self->{hostname}, undef, $cb, sub {
-      my($fh, $host, $port) = @_;
-      $self->{bindport} = $port;
-      $done->send;
-    };
-    $done->recv;
-  }
-  else
-  {
-    $self->{guard} = tcp_server $self->{hostname}, $self->{port}, $cb;
-    $self->{bindport} = $self->{port};
-  }
+
+  $self->{guard} = tcp_server $self->{hostname}, $self->{port}, $cb, sub {
+    my($fh, $host, $port) = @_;
+    $self->{bindport} = $port;
+    $self->{on_bind}->($self);
+  };
   
   $self;
 }
